--- a/pythvenv/pyvenv.cfg
+++ b/pythvenv/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = C:\Users\soumy\AppData\Local\Programs\Python\Python39
+home = C:\Users\soumy\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
-version = 3.9.0
+version = 3.12.3
+executable = C:\Users\soumy\AppData\Local\Programs\Python\Python312\python.exe
+command = C:\Users\soumy\AppData\Local\Programs\Python\Python312\python.exe -m venv D:\FINAL_YEAR_PROJECT\Upload\WebApp\pythvenv
